[tool.poetry]
name = "website"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.6"
wagtail = "3.0.1"
django-environ = "0.9.0"
whitenoise = {version = "6.2.0", extras = ["brotli"]}
Pygments = "2.13.0"
beautifulsoup4 = "4.9.3"
lxml = "4.9.1"
more-itertools = "8.14.0"
requests = "2.28.1"
wagtail-generic-chooser = "0.4.1"
django-rq = "2.5.1"
django-redis = "5.2.0"
wagtail-draftail-snippet = "0.4.1"
gunicorn = "20.1.0"
psycopg2 = "2.9.3"
djangorestframework = "3.13.1"
django-htmx = "1.12.2"
wagtail-metadata = "4.0.0"
humanize = "4.3.0"
drf-yasg = "1.21.3"
django-plausible = "0.3.0"
sentry-sdk = "1.9.5"
wagtail-favicon = "0.2.0"
django-sri = "0.5.0"
wagtail-2fa = "1.6.0"
django-health-check = "3.17.0"
wagtail-autocomplete = {git = "https://github.com/wagtail/wagtail-autocomplete", rev = "03f46a0c256989690d0a43fc21fe0f37f9ede765"}


[tool.poetry.group.dev.dependencies]
honcho = "1.1.0"
flake8 = "4.0.1"
isort = "5.10.1"
black = "22.6.0"
django-browser-reload = "1.6.0"
django-debug-toolbar = "3.5.0"
types-requests = "2.28.5"
mypy = "0.971"
curlylint = "0.13.1"
djhtml = "1.5.1"
wagtail-factories = "3.1.0"
coverage = "6.4.4"
flake8-bugbear = "22.8.23"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.10.0"
flake8-mutable = "1.2.0"
flake8-print = "5.0.0"
flake8-tuple = "0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.curlylint]
include = '/website/.*\.html'
exclude = '''
(
    navbar\.html
  | referrallink_snippet_link\.html
  | onlineaccount_snippet_link\.html
  | 500\.html
)
'''

[tool.curlylint.rules]
indent = 2
html_has_lang = 'en-GB'
